--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+.next
 
 # TypeScript v1 declaration files
 typings/
@@ -71,6 +72,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.development
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
