--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "sass": "^1.54.5",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "flowbite": "^1.5.2",
     "next": "^12.2.5",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0"
   }
 }
