--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "flowbite": "^1.5.2",
     "next": "^12.2.5",
     "phosphor-react": "^1.4.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-player": "^2.10.1",
+    "swiper": "^8.3.2"
   }
 }
