--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "flowbite": "^1.5.2",
     "next": "^12.2.5",
     "phosphor-react": "^1.4.1",
