chore: course icon implementation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next",
     "start": "next start",
-    "build": "next build",
+    "build": "next build && next export",
     "lint": "next lint",
     "type-check": "tsconfig --project tsconfig.json",
     "commit": "git add . && cz"
