--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^12.2.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-collapsed": "^3.4.0",
     "react-player": "^2.10.1",
     "swiper": "^8.3.2"
   }
